Changes to make code work Updated spring cloud dependency Add properties to make code run

--- a/analytics/src/main/resources/application.properties
+++ b/analytics/src/main/resources/application.properties
@@ -26,3 +26,10 @@ spring.cloud.stream.bindings.pci.content-type=application/json
 spring.cloud.stream.bindings.pci.consumer.use-native-decoding=true
 spring.cloud.stream.kafka.streams.bindings.pci.consumer.key-serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.cloud.stream.kafka.streams.bindings.pci.consumer.value-serde=org.apache.kafka.common.serialization.Serdes$LongSerde
+
+
+
+# 
+spring.main.allow-bean-definition-overriding=true
+application.id=analytics-1.0.0-SNAPSHOT
+spring.cloud.stream.kafka.streams.binder.applicationId=analytics-1.0.0-SNAPSHOT
